Mar 17 2004  devel  Tweaked gpsmap to error out on no sample points
                    Fixed error string typo in get_ssid
                    Changed monitor mode controls to not nuke most SSIDs since
                     drivers don't seem to mind anymore, also updated prism54
                     and fixed a compile warning on acx100
Mar 16 2004  devel  Tweaked acx100 source to match acx's new orinoco-esque
                     method
Mar 15 2004  devel  Finished gpsxml-sanitize, util takes a xml files and prints
                     the valid points back to stdout.
                    Fixed sending a removed network as a NETWORK statement
                     during the initial NETWORK enable seed
Mar 14 2004  devel  Split gpsmap sample manipulation voodoo off into its own
                     file for other utils to tie into
                    Started adding extras/ util to sanitize XML files for other
                     programs to use
Mar 13 2004  devel  Updated readme, added client column lists
                    Added unmonitor support for madwifi
                    Added switch to gpsmap to use old pure-average network 
                     center finding code
                    Moved fifodump out of logging, fifo will still happen with
                     '-n' now
                    Added fourth optional parameter to source= config lines to
                     set the initial channel
                    Updated spec file
Mar 12 2004  devel  Changed sound exec to dup2 /dev/null instead of closing
                     stdout and stderr, should prevent sox being mad about
                     not having output paths
Mar 11 2004  devel  Made blanking SSID during entering monitor mode a nonfatal
                     condition.  Should alleviate difficulties with some
                     drivers (prism54, maybe cisco)
                    Added large-file checking and defines, should overcome the